# open-air

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
core/: Cargo.toml
core/src/domain/: coords.rs  mod.rs  viewer.rs
fsd/: Cargo.toml
ivao/: Cargo.toml
ivao-interop/: Cargo.toml
ivao-interop/src/aurora/: gdf.rs
ivao-interop/src/aurora/sector/: airport.rs  airspace.rs  convert.rs  fixes.rs  io.rs  mod.rs  parsing.rs  visual.rs
ivao/src/aurora/: gdf.rs  mod.rs
ivao/src/aurora/sector/: airspace.rs  convert.rs  mod.rs  parsing.rs  visual.rs
react-viewer/: .gitignore  Dockerfile  package.json
react-viewer/public/: index.html  manifest.json
react-viewer/src/: index.js
react-viewer/src/components/: App.css  App.js  ColourPicker.css  ColourPicker.js  Layout.js  Map.css  Map.js  MapStyleView.css  MapStyleView.js  MapView.js
react-viewer/src/services/: airlines.js  cache.js  colour.js  coords.js  ground.js  map.js  palette.js  pilots.js  promise.js  rendering.js  sectionData.js  style.js  tile.js  whazzup.js
