[package]
name = "ivao-interop"
description = "A library for interacting with IVAO-specific interchange formats"
version = "0.1.0"
edition = "2021"

[lib]
name = "ivao"

[dependencies]
clap = "3.0.0-beta.4"
anyhow = "1.0.44"
approx = "0.5.0"
open-air = { path = "../core" }
serde_json = "1.0.68"
env_logger = "0.9.0"
log = "0.4.14"
